Changelog 2.0.7:
Fixed All debrid torrent resolving
Fixed movie resuming
Fixed issue with limited providers running at scrape
Fixed AD re-auth
Changes to attempt to fix XBOX support and ascii issues with timezones
Fixed unaired episodes showing blank
Fixed AD User info fetching
Fixed ghost providers
Fixed TypeError with pre-termination

Changelog 2.0.6:
Create Skins directory if missing
Allow failure in pre-term until investigated

Changelog 2.0.5:
Allow more failures that will require to be investigated further in the future

Changelog 2.0.4:
Safe get release title when cloud scraping
Allow and log failures in maintenance process

Changelog 2.0.3:
Added default value of None for skin color when attempting to pull color from user's skin

Changelog 2.0.2:
Force table re-fresh is sync database fails to rebuild when updating

Changelog 2.0.1:
Fix last_meta_update value to reflect new Seren version

Changleog 2.0.0:

Added Download Manager
Complete re-write of Trakt Sync Database
Metadata handler introduced and complete re-write of handling of metadata
Settings that modify metadata can now be changed on the fly and do not require a rebuild
Users can now manually resolve a file from the source select screen
Users can now manually cache a specific source from the source select screen
Complete re-write of menu handling
Introduced globals module to handle global variables for interpreter
Implement re-use language invoker setting from Kodi
Pre-emptive termination now disabled for background Pre-scrapes and timeout set to max for background scrapes
New artwork and custom dialogs
Metadata now upadted on the fly when updated item encountered from Trakt
Next Up menu now populated from local database
Sync has been fleshed out to include even more meta data during cycle
Failures to auto resolve now prompt user in case they wish to manually interrupt
Items are now able to supply multiple images for any given type for skins that make use of it
Support for Python 3